assets/index.css
@font-face { 
    font-family: 'Moon-Time'; 
    src: url('moon-time-regular.ttf'); 
} 

:root {
    --special-font: "Moon-Time", cursive;
}

header {
    background-color: var(--primary-bgcolor);
}

.video-container {
    position: relative; /* to allow superimposed by #video-message */
}

.video-container video {
    object-fit: cover;
    width: 100%;
    height: 600px;
}

#video-message {
    color: white;
    position: absolute;
    /* max-width: var(--max-width); */
    /* margin: auto; */
    top: 0;
    left: 0;
    right: 0;
    pointer-events: none;
}

#home-title {
    text-align: center;
    line-height: 1;
}

#home-title h1 {
    font-family: var(--special-font);
    font-size: 5rem;
    font-weight: 100;
    margin-bottom: 0;
}

#home-title-details {
    margin: 20px;
    display: flex;
    justify-content: center;
}

#home-title h2 {
  margin: 0;
}

#home-title button {
    height: 3.25rem;
    font-size: 1.1rem;
    padding: 2px 16px;
    border-radius: 10px;
    border: 0;
    pointer-events: all;
}

main button {
    color: var(--dark-color2);
}

#home-main1 {
    text-align: center;
    background-color: var(--primary-bgcolor);
    width: 100%;
    margin-top: -10px; /* to remove gap on top */
}

#home-main1 h2 {
    margin-bottom: 10px;
}

#home-main1 p {
    font-family: var(--system-font);
    font-size: 1.5rem;
    padding: 0 20%;
    margin-top: 0;
}

#home-main1 div {
    padding: 10px 20px;
}

#home-main1-left {
    container-type: inline-size; /* prepare for cqw */
}

#home-main1-left h2 {
    font-size: 6cqw;
}

#home-main1-right {
    flex: 1 1;
    max-width: 300px;
    background-image: url(../images/shot01.jpg);
    background-size: cover;
    background-position: center;
}

#home-main2 {
    background-color: white;
}

#home-main2 > .flex-row {
    padding: 50px;
    column-gap: 5%;
}

.home-main2-element {
    max-width: 300px;
}

.home-main2-element img {
    border-radius: 50%;
    object-fit: cover;
    aspect-ratio: 1/1;
    max-width: 100%;
    display: block;
}

.home-main2-element .btn {
    display: block;
    width: 48%;
    font-size: 1.5rem;
    background-color: var(--primary-bgcolor);
    margin: auto;
}

#home-main3 {
    background-color: var(--primary-bgcolor);
}

#home-main3 > .flex-row {
    padding: 5%;
    column-gap: 5%;
    align-items: stretch;
}

#home-main3-1, #home-main3-1x {
    flex: 1 1 40%;
    background-image: url(../images/shot03.jpg);
    background-size: cover;
    background-position: center;
    border-radius: 80px;
}

#home-main3-1x {
    display: none;
}

#home-main3-2 {
    flex: 2 1 55%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
}

#home-main3-2 h2 {
    font-size: 2.5rem;
    margin-bottom:15px;
}

#home-main3-2 p {
    font-family: var(--system-font);
    font-size: 1.5rem;
    margin-top: 0;
    padding-right: 30px;
}

#home-main3 button {
    width: 200px;
    height: 55px;
    border-radius: 10px;
    font-size: 1rem;
    background-color: var(--secondary-bgcolor);
    border-color: var(--dark-color);
    border-width: thin;
}

#home-main4 iframe {
    border: 0;
    width: 100%;
    height: 600px;
}

#home-main5 {
    background-image: url("../images/shot05.jpg");
    background-size: cover;
    background-position: center;
    margin-top: -10px; /* to remove gap on top */
}

#home-main5 > .flex-row {
    justify-content: space-between;
    height: 680px;
}

#flow-with-us {
    background-color: white;
    opacity: 0.8;
    margin-left: 5%;
    padding: 1rem;
    align-self: center;
    width: calc(2rem + 210px);
    border-radius: 30px;
}

#flow-with-us h2 {
    font-size: 2rem;
    margin-bottom: 0;
}

#flow-with-us h2 + p {
    margin-top: 0.5rem;
}

#open-hours {
    font-family: var(--system-font);
    font-size: 1.5rem;
    font-weight: bold;
    margin-bottom: 0;
}

#open-hours + p {
    margin-top: 0.5rem;
}

#flow-with-us p {
    font-family: var(--system-font);
    font-size: 1.1rem;
}

#follow-us {
    width: 150px;
    margin-right: 5%;
    margin-bottom: 5%;
    align-self: flex-end;
}

#follow-us h3 {
    font-family: var(--system-font);
    color: white;
    font-size: 1.5rem;
    font-weight: bold;
    margin-bottom: 5px;
}

#follow-us img {
    width: 36px;
}

#follow-us a:hover {
    opacity: 0.7;
}

.fa-brands, .fab {
    font-size: 1.5rem;
    color: white;
    background-color: transparent;
    padding: 3px;
}

.small-text {
    font-size: 0.8rem;
}

.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    padding-top: 100px; /* Location of the box */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: var(--dark-color); /*fallback color */
    background-color: rgb(0,0,0, 0.7);
}

#wechat-modal-content {
    background-color: white;
    position: relative;
    width: fit-content;
    padding: 20px;
    margin: auto;
    text-align: center;
}

#wechat-modal p {
    font-family: var(--system-font);
}

#wechat-modal img {
    border: 1px solid var(--dark-color);
}

#wechat-modal .close-btn {
    position: absolute;
    right: 0;
    top: 0;
    border-radius: 15%;
}

@media only screen and (max-width: 481px) {

    .video-container video {
        height: 30rem;
    }

    #middle-dot {
        display: none;
    }

    #home-title h1 {
        margin-top: calc(6.25rem - 10px);
        font-size: 3.75rem;
    }

    #home-title-details {
        flex-wrap: wrap;
    }

    #home-title h2 {
        font-size: 1.75rem;
    }

    #home-main1 div {
        padding: 2%;
    }
    
    #home-main1-right {
        display: none;
    }

    #home-main1 p {
        font-size: 1rem;
    }

    #home-main2 > .flex-row {
        display: block;
    }

    .home-main2-element {
        position: relative;
    }

    .home-main2-element .btn {
        position: absolute;
        bottom: 15vw;
        left: 0;
        right: 0;
        font-size: 1rem;
    }

    #home-main3 > .flex-row {
        display: block;
        text-align: center;
    }

    #home-main3-1 {
        display: none;
    }

    #home-main3-1x {
        margin: auto;
        display: block;
        aspect-ratio: 682 / 911;
        margin-bottom: 5%;    
    }

    #home-main3-2 h2 {
        font-size: 1.75rem;
    }

    #home-main3-2 p {
        font-size: 0.8rem;
        line-height: 2;
        padding-right: 0;
    }

    #home-main4 {
        height: 90vh;
    }

    #home-main5 > .flex-row {
        flex-direction: column;
        justify-content: flex-end;
    }

    #flow-with-us h2 {
        font-size: 1.5rem;
    }

    #flow-with-us h3 {
        font-size: 1.125rem;
    }

    #home-main5 p {
        font-size: 0.9rem;
    }

    #follow-us {
        align-self: center;
    }

    #follow-us h3 {
        font-size: 1.125rem;
        text-align: center;
    }
}

